--- a/BeDev/nbproject/project.properties
+++ b/BeDev/nbproject/project.properties
@@ -125,7 +125,6 @@ endorsed.classpath=\
 excludes=
 
 excludes=
-file.reference.sqljdbc42.jar-1=..\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -140,7 +139,7 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc42.jar-1}
+    ${file.reference.sqljdbc42.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
