--- a/BeDev/web/WEB-INF/web.xml
+++ b/BeDev/web/WEB-INF/web.xml
@@ -1,5 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+    <filter>
+        <filter-name>QuizFilter</filter-name>
+        <filter-class>filter.QuizFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>QuizFilter</filter-name>
+        <url-pattern>/QuizHandle</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>QuizFilter</filter-name>
+        <url-pattern>/Quiz</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>QuizFilter</filter-name>
+        <url-pattern>/QuizReview</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>QuizFilter</filter-name>
+        <url-pattern>/QuizHandle</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>QuizFilter</filter-name>
+        <url-pattern>/RecordController</url-pattern>
+    </filter-mapping>
     <servlet>
         <servlet-name>HomeControl</servlet-name>
         <servlet-class>controller.HomeControl</servlet-class>
