update quiz control

--- a/BeDev/web/WEB-INF/web.xml
+++ b/BeDev/web/WEB-INF/web.xml
@@ -14,6 +14,10 @@
     </filter-mapping>
     <filter-mapping>
         <filter-name>QuizFilter</filter-name>
+        <url-pattern>/Quiz</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>QuizFilter</filter-name>
         <url-pattern>/QuizHandle</url-pattern>
     </filter-mapping>
     <filter-mapping>
