--- a/BeDev/nbproject/project.properties
+++ b/BeDev/nbproject/project.properties
@@ -60,6 +60,7 @@ endorsed.classpath=\
 excludes=
 
 excludes=
+file.reference.gson-2.8.2.jar=lib\\gson-2.8.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -1383,7 +1384,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.sqljdbc42.jar-1}:\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.gson-2.8.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
