--- a/BeDev/web/WEB-INF/web.xml
+++ b/BeDev/web/WEB-INF/web.xml
@@ -64,6 +64,10 @@
         <servlet-name>CourseInfo</servlet-name>
         <servlet-class>controller.CourseManagement.CourseInfo</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>PaymentController</servlet-name>
+        <servlet-class>controller.PaymentController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>HomeControl</servlet-name>
         <url-pattern>/HomeControl</url-pattern>
@@ -95,6 +99,10 @@
     <servlet-mapping>
         <servlet-name>CourseInfo</servlet-name>
         <url-pattern>/expert/CourseInfo</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PaymentController</servlet-name>
+        <url-pattern>/PaymentController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
